# kirohack

./: .gitignore  INTEGRATION_PLAN.md  README.md  TESTING_GUIDE.md  pyproject.toml
.kiro/hooks/: sync-docs-on-change.kiro.hook
.kiro/powers/safetensors-pytorch/: POWER.md
.kiro/powers/tcp-binary-protocol/: POWER.md
.kiro/specs/coordinator-and-client/: .config.kiro  design.md  requirements.md
.kiro/specs/distributed-ai-inference/: .config.kiro  design.md  requirements.md  tasks.md
docs/: README.md  api-reference.md  architecture.md  client.md  coordinator.md  development.md  installation.md  protocol.md  usage.md  worker-components.md  worker-lifecycle.md
meshrun/: pyproject.toml
meshrun/app/: config.py  daemon.py  pyproject.toml  state.py
meshrun/app/cli/: main.py
meshrun/app/cli/commands/: coordinator.py  credits.py  dashboard.py  join.py  leave.py  logs.py  nodes.py  status.py  submit.py  worker.py
meshrun/app/client/: inference.py
meshrun/app/dashboard/: events.py  kiro_sidebar.py  server.py
meshrun/app/dashboard/static/: index.html  main.js  style.css
meshrun/app/display/: panels.py  spinners.py  tables.py
meshrun/client/: __init__.py  client.py  tokenizer.py  transport.py
meshrun/coordinator/: __init__.py  key_manager.py  registry.py  scheduler.py  server.py
meshrun/coordinator/proto/: __init__.py  coordinator.proto  coordinator_pb2.py  coordinator_pb2_grpc.py
meshrun/kiro-extension/: package-lock.json  package.json
meshrun/kiro-extension/src/: commands.ts  dashboard.ts  extension.ts  meshrunProcess.ts  onboarding.ts  sidebar.ts
meshrun/security/: .config.kiro  client.py  crypto.py  demo_run.py  design.md  main.py  model.py  node.py  pipeline.py  requirements.md  requirements.txt  tasks.md  test_security.py
meshrun/worker/: assignment_server.py  connection_pool.py  coordinator_client.py  layer_engine.py  layer_registry.py  node.py  protocol.py  resource_monitor.py  serving.py  shard_manager.py  test_protocol.py  test_secure_protocol.py
