[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshrun"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=14.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.2",
]

[project.scripts]
meshrun = "app.cli.main:app"

[tool.setuptools.packages.find]
where = ["app"]
